[package]
name = "fs-verity"
version = "0.1.0"
authors = ["Ronald Volgers <rvolgers@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.81"
parse-display = "0.4.0"
hex = "0.4.2"
num_enum = "0.5.1"

[dependencies.sha2]
version = "0.9.2"
#features = ["asm"]  # 10% speed improvement for me, but still not close to openssl

