[package]
name = "fs-verity"
version = "0.1.0"
authors = ["Ronald Volgers <rvolgers@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rvolgers/fs-verity-rs"
categories = ["os::linux-apis", "algorithms", "cryptography", "filesystem"]
keywords = ["fs-verity", "hash", "digest", "verity"]
description = "Produce fs-verity measurements in pure Rust, or access the Linux kernel APIs to freeze a file with `fs-verity` and get its digest"

[dependencies]
libc = "0.2.81"
parse-display = "0.4.0"
hex = "0.4.2"
num_enum = "0.5.1"

[dependencies.sha2]
version = "0.9.2"
#features = ["asm"]  # 10% speed improvement for me, but still not close to openssl

